Add new node role model
This adds the new discovery node role model based on
https://github.com/elastic/elasticsearch/commit/aa12af8a3c4
without making the discovery node role extendable or
external pluggable.