@@ -32,11 +32,13 @@ import org.elasticsearch.node.Node;
 
 import java.io.IOException;
 import java.util.Collections;
-import java.util.EnumSet;
 import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 
 /**
@@ -50,8 +52,8 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
         boolean localStorageEnable = Node.NODE_LOCAL_STORAGE_SETTING.get(settings);
         if (localStorageEnable == false &&
             (Node.NODE_DATA_SETTING.get(settings) ||
-                Node.NODE_MASTER_SETTING.get(settings))
-            ) {
+             Node.NODE_MASTER_SETTING.get(settings))
+        ) {
             // TODO: make this a proper setting validation logic, requiring multi-settings validation
             throw new IllegalArgumentException("storage can not be disabled for master and data nodes");
         }
@@ -74,8 +76,7 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
     private final TransportAddress address;
     private final Map<String, String> attributes;
     private final Version version;
-    private final Set<Role> roles;
-
+    private final Set<DiscoveryNodeRole> roles;
 
     /**
      * Creates a new {@link DiscoveryNode}
@@ -86,12 +87,12 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
      * and updated.
      * </p>
      *
-     * @param id               the nodes unique (persistent) node id. This constructor will auto generate a random ephemeral id.
-     * @param address          the nodes transport address
-     * @param version          the version of the node
+     * @param id      the nodes unique (persistent) node id. This constructor will auto generate a random ephemeral id.
+     * @param address the nodes transport address
+     * @param version the version of the node
      */
     public DiscoveryNode(final String id, TransportAddress address, Version version) {
-        this(id, address, Collections.emptyMap(), EnumSet.allOf(Role.class), version);
+        this(id, address, Collections.emptyMap(), DiscoveryNodeRole.ROLES, version);
     }
 
     /**
@@ -103,13 +104,16 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
      * and updated.
      * </p>
      *
-     * @param id               the nodes unique (persistent) node id. This constructor will auto generate a random ephemeral id.
-     * @param address          the nodes transport address
-     * @param attributes       node attributes
-     * @param roles            node roles
-     * @param version          the version of the node
+     * @param id         the nodes unique (persistent) node id. This constructor will auto generate a random ephemeral id.
+     * @param address    the nodes transport address
+     * @param attributes node attributes
+     * @param roles      node roles
+     * @param version    the version of the node
      */
-    public DiscoveryNode(String id, TransportAddress address, Map<String, String> attributes, Set<Role> roles,
+    public DiscoveryNode(String id,
+                         TransportAddress address,
+                         Map<String, String> attributes,
+                         Set<DiscoveryNodeRole> roles,
                          Version version) {
         this("", id, address, attributes, roles, version);
     }
@@ -123,17 +127,24 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
      * and updated.
      * </p>
      *
-     * @param nodeName         the nodes name
-     * @param nodeId           the nodes unique persistent id. An ephemeral id will be auto generated.
-     * @param address          the nodes transport address
-     * @param attributes       node attributes
-     * @param roles            node roles
-     * @param version          the version of the node
+     * @param nodeName   the nodes name
+     * @param nodeId     the nodes unique persistent id. An ephemeral id will be auto generated.
+     * @param address    the nodes transport address
+     * @param attributes node attributes
+     * @param roles      node roles
+     * @param version    the version of the node
      */
     public DiscoveryNode(String nodeName, String nodeId, TransportAddress address,
-                         Map<String, String> attributes, Set<Role> roles, Version version) {
-        this(nodeName, nodeId, UUIDs.randomBase64UUID(), address.address().getHostString(), address.getAddress(), address, attributes,
-            roles, version);
+                         Map<String, String> attributes, Set<DiscoveryNodeRole> roles, Version version) {
+        this(nodeName,
+             nodeId,
+             UUIDs.randomBase64UUID(),
+             address.address().getHostString(),
+             address.getAddress(),
+             address,
+             attributes,
+             roles,
+             version);
     }
 
     /**
@@ -145,17 +156,24 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
      * and updated.
      * </p>
      *
-     * @param nodeName         the nodes name
-     * @param nodeId           the nodes unique persistent id
-     * @param ephemeralId      the nodes unique ephemeral id
-     * @param hostAddress      the nodes host address
-     * @param address          the nodes transport address
-     * @param attributes       node attributes
-     * @param roles            node roles
-     * @param version          the version of the node
+     * @param nodeName    the nodes name
+     * @param nodeId      the nodes unique persistent id
+     * @param ephemeralId the nodes unique ephemeral id
+     * @param hostAddress the nodes host address
+     * @param address     the nodes transport address
+     * @param attributes  node attributes
+     * @param roles       node roles
+     * @param version     the version of the node
      */
-    public DiscoveryNode(String nodeName, String nodeId, String ephemeralId, String hostName, String hostAddress,
-                         TransportAddress address, Map<String, String> attributes, Set<Role> roles, Version version) {
+    public DiscoveryNode(String nodeName,
+                         String nodeId,
+                         String ephemeralId,
+                         String hostName,
+                         String hostAddress,
+                         TransportAddress address,
+                         Map<String, String> attributes,
+                         Set<DiscoveryNodeRole> roles,
+                         Version version) {
         if (nodeName != null) {
             this.nodeName = nodeName.intern();
         } else {
@@ -174,38 +192,48 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
         this.attributes = Collections.unmodifiableMap(attributes);
         //verify that no node roles are being provided as attributes
         Predicate<Map<String, String>> predicate = (attrs) -> {
-            for (Role role : Role.values()) {
-                assert attrs.containsKey(role.getRoleName()) == false;
+            boolean success = true;
+            for (final DiscoveryNodeRole role : DiscoveryNode.ROLE_NAME_TO_POSSIBLE_ROLES.values()) {
+                success &= attrs.containsKey(role.roleName()) == false;
+                assert success : role.roleName();
             }
-            return true;
+            return success;
         };
-        assert predicate.test(attributes);
-        Set<Role> rolesSet = EnumSet.noneOf(Role.class);
-        rolesSet.addAll(roles);
-        this.roles = Collections.unmodifiableSet(rolesSet);
+        assert predicate.test(attributes) : attributes;
+        this.roles = Set.copyOf(roles);
     }
 
-    /** Creates a DiscoveryNode representing the local node. */
+    /**
+     * Creates a DiscoveryNode representing the local node.
+     */
     public static DiscoveryNode createLocal(Settings settings, TransportAddress publishAddress, String nodeId) {
         Map<String, String> attributes = Node.NODE_ATTRIBUTES.getAsMap(settings);
-        Set<Role> roles = getRolesFromSettings(settings);
-        return new DiscoveryNode(Node.NODE_NAME_SETTING.get(settings), nodeId, publishAddress, attributes, roles, Version.CURRENT);
+        Set<DiscoveryNodeRole> roles = getRolesFromSettings(settings);
+        return new DiscoveryNode(Node.NODE_NAME_SETTING.get(settings),
+                                 nodeId,
+                                 publishAddress,
+                                 attributes,
+                                 roles,
+                                 Version.CURRENT);
     }
 
-    /** extract node roles from the given settings */
-    public static Set<Role> getRolesFromSettings(Settings settings) {
-        Set<Role> roles = EnumSet.noneOf(Role.class);
+    /**
+     * extract node roles from the given settings
+     */
+    public static Set<DiscoveryNodeRole> getRolesFromSettings(Settings settings) {
+        Set<DiscoveryNodeRole> roles = new HashSet<>();
         if (Node.NODE_MASTER_SETTING.get(settings)) {
-            roles.add(Role.MASTER);
+            roles.add(DiscoveryNodeRole.MASTER_ROLE);
         }
         if (Node.NODE_DATA_SETTING.get(settings)) {
-            roles.add(Role.DATA);
+            roles.add(DiscoveryNodeRole.DATA_ROLE);
         }
         return roles;
     }
 
     /**
      * Creates a new {@link DiscoveryNode} by reading from the stream provided as argument
+     *
      * @param in the stream
      * @throws IOException if there is an error while reading from the stream
      */
@@ -222,10 +250,37 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
             this.attributes.put(in.readString(), in.readString());
         }
         int rolesSize = in.readVInt();
-        this.roles = EnumSet.noneOf(Role.class);
-        for (int i = 0; i < rolesSize; i++) {
-            this.roles.add(in.readEnum(Role.class));
+        final Set<DiscoveryNodeRole> roles = new HashSet<>(rolesSize);
+        if (in.getVersion().onOrAfter(Version.V_4_5_0)) {
+            for (int i = 0; i < rolesSize; i++) {
+                final String roleName = in.readString();
+                final String roleNameAbbreviation = in.readString();
+                final DiscoveryNodeRole role = ROLE_NAME_TO_POSSIBLE_ROLES.get(roleName);
+                assert roleName.equals(role.roleName()) :
+                    "role name [" + roleName + "] does not match role [" + role.roleName() + "]";
+                assert roleNameAbbreviation.equals(role.roleNameAbbreviation())
+                    : "role name abbreviation [" + roleName + "] does not match role [" + role.roleNameAbbreviation() +
+                      "]";
+                roles.add(role);
+
+            }
+        } else {
+            // an old node will only send us legacy roles
+            for (int i = 0; i < rolesSize; i++) {
+                final LegacyRole legacyRole = in.readEnum(LegacyRole.class);
+                switch (legacyRole) {
+                    case MASTER:
+                        roles.add(DiscoveryNodeRole.MASTER_ROLE);
+                        break;
+                    case DATA:
+                        roles.add(DiscoveryNodeRole.DATA_ROLE);
+                        break;
+                    default:
+                        throw new AssertionError(legacyRole.roleName());
+                }
+            }
         }
+        this.roles = Set.copyOf(roles);
         this.version = Version.readVersion(in);
     }
 
@@ -242,9 +297,24 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
             out.writeString(entry.getKey());
             out.writeString(entry.getValue());
         }
-        out.writeVInt(roles.size());
-        for (Role role : roles) {
-            out.writeEnum(role);
+        if (out.getVersion().onOrAfter(Version.V_4_5_0)) {
+            out.writeVInt(roles.size());
+            for (final DiscoveryNodeRole role : roles) {
+                out.writeString(role.roleName());
+                out.writeString(role.roleNameAbbreviation());
+            }
+        } else {
+            // an old node will only understand legacy roles since pluggable roles is a new concept
+            final List<DiscoveryNodeRole> rolesToWrite =
+                roles.stream().filter(DiscoveryNodeRole.ROLES::contains).collect(Collectors.toUnmodifiableList());
+            out.writeVInt(rolesToWrite.size());
+            for (final DiscoveryNodeRole role : rolesToWrite) {
+                if (role == DiscoveryNodeRole.MASTER_ROLE) {
+                    out.writeEnum(LegacyRole.MASTER);
+                } else if (role == DiscoveryNodeRole.DATA_ROLE) {
+                    out.writeEnum(LegacyRole.DATA);
+                }
+            }
         }
         Version.writeVersion(version, out);
     }
@@ -292,21 +362,21 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
      * Should this node hold data (shards) or not.
      */
     public boolean isDataNode() {
-        return roles.contains(Role.DATA);
+        return roles.contains(DiscoveryNodeRole.DATA_ROLE);
     }
 
     /**
      * Can this node become master or not.
      */
     public boolean isMasterNode() {
-        return roles.contains(Role.MASTER);
+        return roles.contains(DiscoveryNodeRole.MASTER_ROLE);
     }
 
     /**
      * Returns a set of all the roles that the node fulfills.
      * If the node doesn't have any specific role, the set is returned empty, which means that the node is a coordinating only node.
      */
-    public Set<Role> getRoles() {
+    public Set<DiscoveryNodeRole> getRoles() {
         return roles;
     }
 
@@ -377,29 +447,31 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
         return builder;
     }
 
+    private static final Map<String, DiscoveryNodeRole> ROLE_NAME_TO_POSSIBLE_ROLES = Map.of(
+        DiscoveryNodeRole.MASTER_ROLE.roleName(),
+        DiscoveryNodeRole.MASTER_ROLE,
+        DiscoveryNodeRole.DATA_ROLE.roleName(),
+        DiscoveryNodeRole.DATA_ROLE
+    );
+
     /**
      * Enum that holds all the possible roles that that a node can fulfill in a cluster.
      * Each role has its name and a corresponding abbreviation used by cat apis.
      */
-    public enum Role {
-        MASTER("master", "m"),
-        DATA("data", "d");
+    private enum LegacyRole {
+        MASTER("master"),
+        DATA("data");
 
         private final String roleName;
-        private final String abbreviation;
 
-        Role(String roleName, String abbreviation) {
+        LegacyRole(final String roleName) {
             this.roleName = roleName;
-            this.abbreviation = abbreviation;
         }
 
-        public String getRoleName() {
+        public String roleName() {
             return roleName;
         }
 
-        public String getAbbreviation() {
-            return abbreviation;
-        }
     }
 
 }
